# bls-contract

./: Cargo.toml  Makefile  meta.txt
io/: Cargo.toml
io/src/: lib.rs
src/: contract.rs  error.rs  key.rs  lib.rs  signature.rs
state/: Cargo.toml
state/src/: state.rs
tests/: data.json  gclient_test.rs  key.rs  signature.rs  test.rs  utils.rs
