[package]
name = "bls"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
app-io = { path = "io" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable", default-features = false }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
hashbrown = "0.13"
sharks = { version = "0.5.0", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
bls12_381 = { version = "=0.7.1", features = ["experimental"] }
pairing_lib = { version = "0.22.0", package = "pairing" }
sha2 = { version = "0.9", default-features = false }
hkdf = { version = "0.11.0", default-features = false }
ff = { version = "0.12", default-features = false }
rand_core = { version = "0.6.4", default-features = false }

#bls_amcl = { git = "https://github.com/lovesh/signature-schemes.git" }
#bls12_381 = "0.7.1"
#blsttc = "8"
#blst = { version = "0.3.10", default-features = false, features = ["no-threads"] }
#bls-signatures = { git = "https://github.com/filecoin-project/bls-signatures" }
#bls = "0.0.0"
#threshold-bls-ffi = { git = "https://github.com/celo-org/celo-threshold-bls-rs.git", features = ["wasm"] }

[build-dependencies]
app-io = { path = "io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[dev-dependencies]
app-state = { path = "state" }
gtest = { git = "https://github.com/gear-tech/gear.git" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable", default-features = false }
tokio = "1"
gclient = { git = "https://github.com/gear-tech/gear.git" }

rand = "0.8"
base64 = "0.13.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
base64-serde = "0.6.1"
rand_chacha = "0.3.1"

[features]
# Used for inserting constants with WASM binaries (NOT paths) of the contract in
# the root crate. Usually these constants used in gclient tests instead of
# strings with paths to the binaries in the "target" directory. If you don't
# like this approach or don't use gclient tests, you can freely remove this
# feature from here and from the rest of the code.
binary-vendor = ["app-state/binary-vendor"]

# It's necessary to include all metawasm crates in the workspace section,
# otherwise they'll be ignored by Cargo and won't be built.
[workspace]
members = ["state"]
